Revise README for Benedict Browser Complete Edition
Updated README to reflect new features and improvements in the Complete Edition.